# coilbox

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  biome.json  components.json  index.html  package.json  tsconfig.json  vite.config.ts
crates/coilbox-springlua/: Cargo.toml
crates/coilbox-springlua/src/: env.rs  lib.rs  vfs.rs
crates/coilbox-springlua/tests/: eval.rs
crates/coilbox-springlua/tests/fixtures/modinfo/: modinfo.lua
crates/coilbox-springlua/tests/fixtures/selfcontained/: mapinfo.lua
crates/coilbox-springlua/tests/fixtures/withinclude/: mapinfo.lua
crates/coilbox-thumb-cache/: Cargo.toml
crates/coilbox-thumb-cache/src/: lib.rs
crates/coilbox-unitsync-worker/: Cargo.toml
crates/coilbox-unitsync-worker/src/: archive.rs  config.rs  ffi.rs  game.rs  heightmap.rs  lua.rs  main.rs  minimap.rs  model.rs  skirmishai.rs
crates/tauri-plugin-coilbox-anim/: Cargo.toml  PORTING.md  build.rs
crates/tauri-plugin-coilbox-anim/permissions/: default.toml
crates/tauri-plugin-coilbox-anim/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-anim/permissions/autogenerated/commands/: anim_bos2cob.toml  anim_cob_disasm.toml  anim_reveal.toml
crates/tauri-plugin-coilbox-anim/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-anim/src/: cob.rs  compiler.rs  disasm.rs  fold.rs  grammar.rs  lib.rs  opcodes.rs  parser.rs  preprocess.rs  tokenizer.rs
crates/tauri-plugin-coilbox-anim/tests/: compile.rs  disasm.rs
crates/tauri-plugin-coilbox-anim/tests/fixtures/: anims.bos  anims.cob  features.bos  features.cob  folds.bos  folds.cob  min.bos  min.cob
crates/tauri-plugin-coilbox-content/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-content/permissions/: default.toml
crates/tauri-plugin-coilbox-content/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-content/permissions/autogenerated/commands/: content_add_root.toml  content_candidates.toml  content_demo_info.toml  content_list_engines.toml  content_list_replays.toml  content_open_path.toml  content_remove_root.toml  content_rescan.toml  content_scan_root.toml  content_state_load.toml  content_verify_engine.toml
crates/tauri-plugin-coilbox-content/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-content/src/: demo.rs  engine.rs  lib.rs  model.rs  paths.rs  scan.rs
crates/tauri-plugin-coilbox-downloads/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-downloads/permissions/: default.toml
crates/tauri-plugin-coilbox-downloads/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-downloads/permissions/autogenerated/commands/: dl_bar_maps.toml  dl_download.toml  dl_download_engine_recoil.toml  dl_download_engine_spring.toml  dl_download_file.toml  dl_download_map.toml  dl_hakora_maps.toml  dl_installed_content.toml  dl_recoil_engines.toml  dl_repos.toml  dl_springfiles_engines.toml  dl_springfiles_list.toml  dl_version.toml  dl_versions.toml
crates/tauri-plugin-coilbox-downloads/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-downloads/src/: lib.rs  progress.rs  rapid.rs  sidecar.rs  sources.rs
crates/tauri-plugin-coilbox-mapconv/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-mapconv/permissions/: default.toml
crates/tauri-plugin-coilbox-mapconv/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-mapconv/permissions/autogenerated/commands/: mc_cancel.toml  mc_compile.toml  mc_decompile.toml  mc_image_info.toml  mc_open_path.toml  mc_open_url.toml  mc_probe.toml  mc_read_mapinfo.toml  mc_settings_load.toml  mc_settings_save.toml  mc_suggest_sources.toml
crates/tauri-plugin-coilbox-mapconv/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-mapconv/src/: archive.rs  lib.rs  mapinfo.rs  settings.rs  sidecar.rs  smf.rs
crates/tauri-plugin-coilbox-play/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-play/permissions/: default.toml
crates/tauri-plugin-coilbox-play/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-play/permissions/autogenerated/commands/: play_cancel.toml  play_generate_script.toml  play_launch.toml
crates/tauri-plugin-coilbox-play/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-play/src/: launch.rs  lib.rs  script.rs
crates/tauri-plugin-coilbox-prdownloader/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-prdownloader/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-prdownloader/src/: lib.rs  sidecar.rs
crates/tauri-plugin-coilbox-uberstress/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-uberstress/permissions/: default.toml
crates/tauri-plugin-coilbox-uberstress/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-uberstress/permissions/autogenerated/commands/: us_cancel.toml  us_config_get.toml  us_config_set.toml  us_export_report.toml  us_history.toml  us_import_report.toml  us_report.toml  us_results_dir.toml  us_run.toml  us_scenarios.toml  us_seed_sql.toml  us_settings_load.toml  us_settings_save.toml
crates/tauri-plugin-coilbox-uberstress/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-uberstress/src/: config.rs  lib.rs  report.rs  settings.rs  sidecar.rs
crates/tauri-plugin-coilbox-unitsync/: Cargo.toml  build.rs
crates/tauri-plugin-coilbox-unitsync/permissions/: default.toml
crates/tauri-plugin-coilbox-unitsync/permissions/autogenerated/: reference.md
crates/tauri-plugin-coilbox-unitsync/permissions/autogenerated/commands/: unitsync_archive_extract.toml  unitsync_archive_file.toml  unitsync_archive_tree.toml  unitsync_cancel.toml  (+11 more)
crates/tauri-plugin-coilbox-unitsync/permissions/schemas/: schema.json
crates/tauri-plugin-coilbox-unitsync/src/: lib.rs  sidecar.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: pr-downloader-aarch64-apple-darwin
src-tauri/capabilities/: anim.json  content.json  default.json  downloads.json  mapconv.json  mcp.json  play.json  prdownloader.json  uberstress.json  unitsync.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+133 files in other folders)
