[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/coilbox-springlua",
  "crates/coilbox-thumb-cache",
  "crates/coilbox-unitsync-worker",
  "crates/tauri-plugin-coilbox-downloads",
  "crates/tauri-plugin-coilbox-uberstress",
  "crates/tauri-plugin-coilbox-mapconv",
  "crates/tauri-plugin-coilbox-anim",
  "crates/tauri-plugin-coilbox-content",
  "crates/tauri-plugin-coilbox-play",
]
