[package]
name = "coilbox"
version = "0.0.0"
description = "coilbox"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
picoframe-core = "0.0.2"
tauri-plugin-coilbox-downloads = { path = "../crates/tauri-plugin-coilbox-downloads" }
tauri-plugin-coilbox-uberstress = { path = "../crates/tauri-plugin-coilbox-uberstress" }
tauri-plugin-coilbox-mapconv = { path = "../crates/tauri-plugin-coilbox-mapconv" }
tauri-plugin-coilbox-anim = { path = "../crates/tauri-plugin-coilbox-anim" }
tauri-plugin-coilbox-content = { path = "../crates/tauri-plugin-coilbox-content" }
tauri-plugin-coilbox-unitsync = { path = "../crates/tauri-plugin-coilbox-unitsync" }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
