[package]
name = "coilbox-springlua"
version = "0.0.0"
description = "Sandboxed evaluator for Spring/Recoil Lua config (mapinfo.lua, modinfo.lua, ...) with a loose-file VFS shim. Loose working-directory files only; unitsync is the path for archive-faithful data."
edition = "2021"
license = "MIT"

[dependencies]
# Real Lua VM. `lua51` matches Spring/Recoil's dialect; `vendored` compiles Lua
# from source (no system Lua needed, portable across our build targets);
# `serde` powers `from_value` deserialization into typed structs.
mlua = { version = "0.11", features = ["lua51", "vendored", "serde"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
