[package]
name = "coilbox-unitsync-worker"
version = "0.0.0"
description = "Out-of-process worker that dlopens an engine's libunitsync and dumps its map/game/archive data as JSON. Isolated from the app so a unitsync crash can't take it down."
edition = "2021"
license = "MIT"

[[bin]]
name = "coilbox-unitsync-worker"
path = "src/main.rs"

[dependencies]
# Runtime dlopen of the engine's libunitsync.* (NOT a link-time dependency — the
# library lives in the user's engine install, not in our build).
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Minimap mode encodes the RGB565 buffer to PNG; archive preview also decodes
# TGA (which browsers can't render) and re-encodes it to PNG.
image = { version = "0.25", default-features = false, features = ["png", "tga"] }
base64 = "0.22"
# Shared dependency-free on-disk byte cache: persist rendered minimap PNGs so they
# aren't re-rendered every launch.
coilbox-thumb-cache = { path = "../coilbox-thumb-cache" }

[dev-dependencies]
# Stock Lua 5.1 used ONLY to unit-test the injected serializer + wrapper against a
# faithful interpreter (the real test target, unitsync's LuaParser, needs a live
# libunitsync and is exercised manually).
mlua = { version = "0.11", features = ["lua51", "vendored"] }
