[package]
name = "tauri-plugin-coilbox-content"
version = "0.0.0"
description = "Content discovery plugin for Coilbox (Rust half): finds Spring/Recoil engines and data roots. ACL identifier: coilbox-content"
edition = "2021"
license = "MIT"
# Tauri requires `links` to equal `package.name`. The ACL identifier is this
# name with the `tauri-plugin-` prefix stripped -> `coilbox-content`.
links = "tauri-plugin-coilbox-content"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
picoframe-core = "0.0.2"
flate2 = "1"
