[package]
name = "tauri-plugin-coilbox-mapconv"
version = "0.0.0"
description = "mapconv (SpringMapConvNG) map compile/decompile sidecar plugin for Coilbox (Rust half). ACL identifier: coilbox-mapconv"
edition = "2021"
license = "MIT"
# Tauri requires `links` to equal `package.name`. The ACL identifier is this
# name with the `tauri-plugin-` prefix stripped -> `coilbox-mapconv`.
links = "tauri-plugin-coilbox-mapconv"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
picoframe-core = "0.0.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
sevenz-rust2 = "0.21.1"
# Decode source images (texture/heightmap/...) to read true dimensions and build
# small preview thumbnails. default-features off; only the formats mapconv accepts.
image = { version = "0.25", default-features = false, features = ["png", "bmp", "tga", "jpeg", "tiff"] }
