[package]
name = "tauri-plugin-coilbox-play"
version = "0.0.0"
description = "Singleplayer/skirmish launcher plugin for Coilbox (Rust half). ACL identifier: coilbox-play"
edition = "2021"
license = "MIT"
# Tauri requires `links` to equal `package.name`. The ACL identifier is this
# name with the `tauri-plugin-` prefix stripped -> `coilbox-play`.
links = "tauri-plugin-coilbox-play"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
picoframe-core = "0.0.2"
