[package]
name = "tauri-plugin-coilbox-prdownloader"
version = "0.0.0"
description = "pr-downloader sidecar plugin for Coilbox (Rust half). ACL identifier: coilbox-prdownloader"
edition = "2021"
license = "MIT"
# Tauri requires `links` to equal `package.name`. The ACL identifier is this
# name with the `tauri-plugin-` prefix stripped -> `coilbox-prdownloader`.
links = "tauri-plugin-coilbox-prdownloader"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
picoframe-core = "0.0.2"
# Rapid-repo browsing: fetch gzipped index files over HTTPS and inflate them.
# rustls-tls avoids an OpenSSL build dependency across platforms.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
